# media-server

./: CMakeLists.txt  Dockerfile
.github/workflows/: build-base.yml  build-rtc-x86.yml  build-rtc.yml  docker-publish.yml
output/web/: index.html
src/: MsFileSource.cpp  MsGbServer.cpp  MsGbSource.cpp  MsHttpServer.cpp  MsHttpSink.cpp  MsMediaSource.cpp  MsMediaSource.h  MsMsgDef.h  MsOnvifHandler.cpp  MsOnvifHandler.h  MsRtcServer.cpp  MsRtcServer.h  MsRtcSink.cpp  MsRtcSink.h  MsRtcSource.cpp  MsRtcSource.h  MsRtmpSource.cpp  MsRtspSink.cpp  MsRtspSource.cpp  MsSourceFactory.cpp
src/base/: MsCommon.cpp  MsCommon.h
